crates/djls-project/tests/snapshots/corpus__repos__django-4.2__django__templatetags__tz.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "django.templatetags.tz::tag::get_current_timezone":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    as_var: keep
  "django.templatetags.tz::tag::localtime":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Max: 2
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
      - constraint:
          ChoiceAt:
            position:
              Forward: 1
            values:
              - "on"
              - "off"
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.templatetags.tz::tag::timezone":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' takes one argument (timezone)"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities:
  "django.templatetags.tz::filter::localtime": no_argument
  "django.templatetags.tz::filter::timezone": required_argument
  "django.templatetags.tz::filter::utc": no_argument
block_specs:
  "django.templatetags.tz::tag::localtime":
    body_analysis_evidence: not_detected
    end_tag: endlocaltime
    intermediates: []
  "django.templatetags.tz::tag::timezone":
    body_analysis_evidence: not_detected
    end_tag: endtimezone
    intermediates: []
